--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "floema",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --progress --config webpack.config.build.js",
-    "development": "webpack serve --progress --config webpack.config.development.js",
+    "backend:build": "node app.js",
+    "backend:development": "nodemon app.js",
+    "frontend:build": "webpack --progress --config webpack.config.build.js",
+    "frontend:development": "webpack serve --progress --config webpack.config.development.js",
     "start": "npm run development"
   },
   "author": "Dang Nguyen",
@@ -31,9 +33,14 @@
     "raw-loader": "^4.0.2",
     "sass": "^1.32.13",
     "sass-loader": "^11.1.1",
+    "terser-webpack-plugin": "^5.1.2",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   }
 }
